--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,13 +1,17 @@
 spring:
-  datasource :
+  datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;MODE=MySQL
     driverClassName: org.h2.Driver
     username: sa
     password:
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
 
 secret:
